--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,6 +15,9 @@
             </h1>
             <nav>
                 <a href="/login">login</a>
+                 
+                <button id="logout" class="btn-no-style">logout</button>
+                
             </nav>
         </header>
         <main>
@@ -24,7 +27,7 @@
             Thanks for visiting!
         </footer>
     </div>
-    
+    <script src="/javascript/logout.js"></script> 
 </body>
 
 </html>
